--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="anisplom">
-      <span id="chart"></span>
+      <div id="chart"></div>
     </div>
 
   </div>
@@ -82,7 +82,49 @@
     <div class="content">
       <h2>Parameters</h2>
 
-      <p>Our tool supports the following URL query parameters:</p>
+      <p>Our tool supports the following URL query parameters. Default values are in bold.</p>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Parameter</th>
+            <th nowrap>Values</th>
+            <th>Description</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td><code>animate</code></td>
+            <td nowrap><strong><a href="?animate=true">true</a></strong>, <a href="?animate=false">false</a></td>
+            <td>If <code>true</code>, enables the animation loop.</td>
+          </tr>
+
+          <tr>
+            <td><code>prerender</code></td>
+            <td nowrap><strong><a href="?prerender=true">true</a></strong>, <a href="?prerender=false">false</a></td>
+            <td>If <code>true</code>, prerenders the entire dataset before the first animation frame.</td>
+          </tr>
+
+          <tr>
+            <td><code>shuffle</code></td>
+            <td nowrap><strong><a href="?shuffle=true">true</a></strong>, <a href="?shuffle=false">false</a></td>
+            <td>If <code>true</code>, shuffles the row order every loop through the dataset.</td>
+          </tr>
+
+          <tr>
+            <td><code>rows</code></td>
+            <td nowrap><strong><a href="?rows=1">1</a></strong>, <a href="?rows=2">2</a>, ..., <var>n</var></td>
+            <td>A positive integer value that controls the number of rows redrawn every animation frame. Must be less than <var>n</var>, the total number of rows in the dataset.</td>
+          </tr>
+
+          <tr>
+            <td><code>encoding</code></td>
+            <td nowrap><strong><a href="?encoding=normal">normal</a></strong>, <a href="?encoding=open">open</a>,<br/> <a href="?encoding=alpha">alpha</a>, <a href="?encoding=blend">blend</a></td>
+            <td>Changes the point encoding. If <code>normal</code>, uses a circle filled by class with a white outline. If <code>open</code>, uses a circle with a outline colored by class and no fill. If <code>alpha</code>, uses the normal encoding plus alpha blending (turning on transparency). If <code>blend</code>, uses the normal encoding plus color blending.</td>
+          </tr>
+        </tbody>
+      </table>
 
     </div>
   </div>
@@ -98,107 +140,60 @@
   </div>
 </footer>
 
+<script src="js/p5.min.js"></script>
+<script src="js/p5.dom.min.js"></script>
 
-<script language="javascript" type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.js"></script>
-<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/addons/p5.dom.js"></script>
-<script language="javascript" type="text/javascript" src="multi_scatter.js"></script>
-<script language="javascript" type="text/javascript" src="load_data_config.js"></script>
+<script src="js/datasets.js"></script>
+<script src="js/anisplom.js"></script>
 
-<script language="javascript" type="text/javascript">
+<script>
+  var splom;
 
-  var config;
-	var chart;
-	var highlight;
-	var best = {
-		num_points: 0,
-		num_classes: 0
-	}
+  var url = new URL(window.location.href);
+  var source = url.searchParams.get('source');
 
-  function onDataSelect() {
-		config = get_data_config();
-		remove();
-    chart = multi_scatter(config.path, config.attr, config.category, config.animate, "", "chart");
-	  new p5();
-		resetHighlightDataDisplay();
-	}
-  document.getElementById("data-select").addEventListener("change", onDataSelect);
+  if (datasets.hasOwnProperty(source)) {
+    document.getElementById('data-select').value = source;
+  }
 
-	function getParameterByName(name, url) {
-    if (!url) url = window.location.href;
-    name = name.replace(/[\[\]]/g, "\\$&");
-    var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-        results = regex.exec(url);
-    if (!results) return null;
-    if (!results[2]) return '';
-    return decodeURIComponent(results[2].replace(/\+/g, " "));
-	}
+  selectData();
+  document.getElementById('data-select').addEventListener('change', selectData);
 
-	function resetHighlightDataDisplay() {
-		updateHighlightDataDisplay("curr", 0, 0);
-		updateHighlightDataDisplay("best", 0, 0);
-	}
+  function selectData() {
+    var name = document.getElementById('data-select').value;
+    console.assert(datasets.hasOwnProperty(name));
 
-	function updateHighlightDataDisplay(type, num_points, num_classes) {
-		// if (type === "curr") {
-		// 	document.getElementById("num_points_curr").innerHTML = num_points;
-		// 	document.getElementById("num_classes_curr").innerHTML = num_classes;
-		// } else {
-		// 	document.getElementById("num_points_best").innerHTML = num_points;
-		// 	document.getElementById("num_classes_best").innerHTML = num_classes;
-		// 	best = {
-		// 		num_points: num_points,
-		// 		num_classes: num_classes
-		// 	}
-		// }
-	}
+    if (splom !== undefined) {
+      remove();
+    }
 
-	config = get_data_config();
-  chart = multi_scatter(config.path, config.attr, config.category, config.animate, null, "chart");
-	highlight = getParameterByName("highlight") === "true" ? true : false;
-
-	if (highlight) {
-		document.getElementById("highlight_info").style.visibility = "visible";
-	}
+    splom = anisplom('chart', datasets[name], datasets[name].default);
+    new p5();
+  }
 
   function preload() {
-		chart.preload();
-	}
+    splom.preload();
+  }
 
-	function setup() {
-		chart.setup();
-	}
+  function setup() {
+    splom.setup();
+  }
 
-	function draw() {
-		chart.draw();
-	}
+  function draw() {
+    splom.draw();
+  }
 
-	function mouseClicked() {
-		chart.mouseClicked();
-	}
+  function mouseClicked() {
+    splom.mouseClicked();
+  }
 
-	function mousePressed() {
-		chart.mousePressed();
-	}
+  function mouseMoved() {
+    splom.mouseMoved();
+  }
 
-	function mouseReleased() {
-		if (chart.mouseReleased() && highlight) {
-			var num_points_curr = chart.highlightRect.numPoints;
-			var num_classes_curr = chart.highlightRect.numClasses;
-			updateHighlightDataDisplay("curr", num_points_curr, num_classes_curr);
-
-			if (num_points_curr > best.num_points) {
-				updateHighlightDataDisplay("best", num_points_curr, num_classes_curr);
-			}
-		}
-	}
-
-	function mouseMoved() {
-		chart.mouseMoved();
-	}
-
-	function mouseDragged() {
-		chart.mouseDragged();
-	}
+  function windowResized() {
+    splom.windowResized();
+  }
 
 </script>
 </body>
